K8s/aline-bank-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-bank
  labels:
    app: aline-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-bank
  template:
    metadata:
      labels:
        app: aline-bank
    spec:
      containers:
      - name: aline-bank
        image: stephenfreed/aline-bank-microservice:v0.1.0
        ports:
        - containerPort: 8072
---

apiVersion: v1
kind: Service
metadata:
  name: aline-bank
spec:
  type: NodePort
  selector:
    app: aline-bank
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
      nodePort: 30003
