K8s/aline-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-gatway
  labels:
    app: aline-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-gateway
  template:
    metadata:
      labels:
        app: aline-gateway
    spec:
      containers:
      - name: aline-gateway
        image: stephenfreed/aline-gateway:v0.1.0
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: aline-gateway
spec:
  type: NodePort
  selector:
    app: aline-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
