K8s/aline-user-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-user
  labels:
    app: aline-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-user
  template:
    metadata:
      labels:
        app: aline-user
    spec:
      containers:
      - name: aline-user
        image: stephenfreed/aline-user-microservice:v0.1.0
        ports:
        - containerPort: 8070
---

apiVersion: v1
kind: Service
metadata:
  name: aline-user
spec:
  type: NodePort
  selector:
    app: aline-user
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
      nodePort: 30001
