K8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alinedb
  labels:
    app: alinedb
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alinedb
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alinedb
        tier: database
    spec:
      containers:
      - name: alinedb
        image: mysql:8.0.28
        ports:
        - containerPort: 3306
          name: alinedb
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: alinedb-persistance-storage
      volumes:
        - name: alinedb-persistance-storage
          persistentVolumeClaim:
            claimName: alinedb-pv-claim

---

apiVersion: v1
kind: Service
metadata:
  name: alinedb
  labels:
    app: alinedb
    tier: database
spec:
  selector:
    app: alinedb
    tier: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None
